--- a/app/templates/app/libros_api.html
+++ b/app/templates/app/libros_api.html
@@ -9,8 +9,8 @@
       {% for x in librosimagina %}
       <div class="col-sm-4">
         <div class="m-3 card" style="width: 400px">
-          {% if x.imagen %}
-          <img src="{{ libro.imagen.url }}" class="card-img-top" />
+          {% if libro.imagen %}
+          <img src="{{ libro.imagen_url }}" class="card-img-top" />
           {% else %}
           <img src="../static/app/img/imagenlibros.jpg" class="card-img-top" style="width: 100%; max-width: 100%" />
           {% endif %}
